# try_opt

./: .gitignore  .gitmodules  AXIS_REMAPPING_README.md  GRIPPER_SETUP.md  GUIA_RAPIDA_ROBOT_REAL.md  HAPTIC_TELEOP_README.md  haptic_config_examples.sh  haptic_remap_examples.sh  plot_teleop_data.py  test_gripper_setup.sh
config/: my_robot_calibration_ur5e.yaml
install/: local_setup.sh  setup.sh
install/ur5_scaled_sender/lib/ur5_scaled_sender/: scaled_traj_publisher
install/ur5_scaled_sender/share/ur5_scaled_sender/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5_scaled_sender/share/ur5_scaled_sender/launch/: send_trajectory.launch.py
log/: latest_build
src/griper_control/launch/: gripper_modular.launch.py
src/ur5_scaled_sender/: CMakeLists.txt  OPT_README.md  README.md
src/ur5_scaled_sender/launch/: opt_teleop.launch.py  opt_teleop_haptic.launch.py  opt_teleop_pinocchio.launch.py  opt_teleop_real.launch.py  real_robot.launch.py  send_trajectory.launch.py  view_both_robots.launch.py  view_phantom.launch.py  visualize_omni.launch.py
src/ur5_scaled_sender/rviz/: dual_robot.rviz
src/ur5_scaled_sender/src/: comparation.cpp  guia_control_funccional.cpp  joint_trajectory_publisher.cpp  opt_teleop.cpp  opt_teleop_haptic.cpp  opt_teleop_haptic.cpp.backup  opt_teleop_old.cpp  opt_teleop_pinocchio.cpp  test_jacobian.cpp
urdf/: ur5.urdf
